chore: fix card spacing and intro input

--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,7 @@ body {
 /* list-item */
 .item {
 	display: flex;
-	padding: 0.8em;
-	width: 100%;
+	padding: 0.4em 0.8em 0.4em 0em;
 }
 
 @media all and (min-width: 40em) {
